# QtChatting

./: .gitignore  README.md
app/: CMakeLists.txt  config.ini
app/assets/: LoginWidget.qss  RegsiterWidget.qss  ResetWidget.qss
app/detail/include/: global.h  httpmgr.h  singleton.hpp
app/detail/source/: httpmgr.cpp
app/src/: LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  RegisterWidget.cpp  RegisterWidget.h  RegisterWidget.ui  ResetWidget.cpp  ResetWidget.h  ResetWidget.ui  main.cpp  resources.qrc
app/widgets/: FramelessWindow.cpp  FramelessWindow.h
gate_server/: CMakeLists.txt
gate_server/.cache/clangd/index/: CServer.cpp.5184FFAA79309E22.idx  CServer.h.FFCB608711564B7F.idx  HttpConnection.cpp.AF6609850C58B69E.idx  HttpConnection.h.20CC08F6583B90CB.idx  main.cpp.71CDEC24A59566B3.idx
gate_server/include/: CServer.h  LogicSystem.h  Singleton.hpp  common.h
gate_server/src/: LogicSystem.cpp  main.cpp
server/: CMakeLists.txt
server/gate_server/: CMakeLists.txt  config.ini
server/gate_server/include/: CServer.h  ConfigMgr.h  HttpConnection.h  IOcontextPool.h  LogicSystem.h  RedisMgr.h  RingBuffer.hpp  SqlDao.h  SqlMgr.h  SqlPool.h  VarifyGrpcClient.h  VarifyGrpcClient.hpp  common.h  debug.hpp
server/gate_server/src/: CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  IOcontextPool.cpp  LogicSystem.cpp  RedisMgr.cpp  SqlDao.cpp  SqlMgr.cpp  SqlPool.cpp  VarifyGrpcClient.cpp  main.cpp
server/proto/: CMakeLists.txt
server/proto/protos/: message.proto
server/varify_server/: config.js  config.json  const.js  email.js  package-lock.json  package.json  redis.js  server.js
varify_server/: config.json  package-lock.json  package.json  proto.js  server.js
